test: trigger CI on PR

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <h1>23110357 bui thanh tung</h1>
     <div id="hero"></div>
     <div id="features"></div>
     <div id="pricing"></div>
