feat(hero): update hero section content

--- a/sections/hero.html
+++ b/sections/hero.html
@@ -1,4 +1,5 @@
 <section class="hero">
+  <h1>Hello, I'm Bui Thanh Tung</h1>
   <h2>Hero Section</h2>
   <p>This hero section is implemented by Bui Thanh Tung.</p>
   <button>Get Started</button>
